# univrs

./: .gitignore  Cargo.toml  Dockerfile  justfile  tailwind.config.js
articles/: acepcfix.md  archlinux-post-installation.md  astro.md  deno-is-here.md  eshopw.md  go-lessons-learnt-by-refactoring.md  learning-programming-with-a-turtle.md  mojave-wallpapers.md  nextjs-sveltekit-data-fetching.md  p2.md  rust-server-components.md  univrs.md  yubikey.md
migrations/: 20230713195835_initial.sql  20230714142227_likes.sql  20230821171530_apps.sql  20230914075210_bookmarks.sql
src/: apps.rs  articles.rs  bookmarks.rs  hash.rs  icons.rs  images.rs  leptos.rs  main.rs  markdown.rs  meta.rs  rsc.rs  social_img.rs  sstyle.rs  sycamore.rs  xmarkdown.rs
src/components/: alert.html  heart.rs  layout.rs  md.rs  mod.rs
src/pages/: apps.rs  articles.rs  auth.rs  bookmarks.rs  homepage.rs  mod.rs
src/pages/admin/: bookmarks.rs
src/templates/: index.html
static/: ClashDisplay-Variable.woff2.br  DarkerGrotesque-VariableFont_wght.ttf.br  Inter-VariableFont_slnt,wght.ttf.br  htmx.min.js.br  site.webmanifest  style.css  style.dist.css  tailwind.css
static/Clash Display/Fonts/WEB/: README.md
static/Clash Display/Fonts/WEB/css/: clash-display.css
