[package]
name = "univrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-login = { version = "0.5.0", features = ["sqlx", "postgres"] }
chrono = "0.4.26"
comrak = "0.18.0"
data-encoding = "2.4.0"
frontmatter = "0.4.0"
lightningcss = "1.0.0-alpha.44"
lol_html = "1.0.1"
maud = { version = "0.25.0", features = ["axum"] }
oauth2 = "4.4.1"
paste = "1.0.13"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.11.18", features = ["json"] }
ring = "0.16.20"
serde = "1.0.171"
serde_json = "1.0.102"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls"] }
stylist = { version = "0.12.1", features = ["ssr"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tower-livereload = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
