[package]
name = "univrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.12.2"
axum = "0.6"
axum-login = { version = "0.5.0", features = ["sqlx", "postgres"] }
axum-macros = "0.3.8"
chrono = "0.4.26"
comrak = "0.18.0"
data-encoding = "2.4.0"
frontmatter = "0.4.0"
futures = "0.3.28"
image = "0.24.6"
imageproc = "0.23.0"
lightningcss = "1.0.0-alpha.44"
lru = "0.11.0"
oauth2 = "4.4.1"
once_cell = "1.18.0"
paste = "1.0.13"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.11.18", features = ["json"] }
ring = "0.16.20"
rscx = { version = "0.1.7", features = ["axum"] }
rscx-mdx = { version = "0.1.2" }
rusttype = "0.9.3"
serde = "1.0.171"
serde_json = "1.0.102"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls"] }
stylist = { version = "0.12.1", features = ["ssr"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["rt"] }
tower-http = { version = "0.4", features = ["full"] }
tower-livereload = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
